--- a/OldStore.Client/Views/HomeView.xaml
+++ b/OldStore.Client/Views/HomeView.xaml
@@ -34,9 +34,7 @@
                 </Grid>
 
                 <StackPanel Margin="0 15 0 0" x:Name="MyGames" Orientation="Horizontal">
-                    <controls:CompactGameControl/>
-                    <controls:CompactGameControl Margin="10 0 0 0"/>
-                    <controls:CompactGameControl Margin="10 0 0 0"/>
+                    
                 </StackPanel>
 
 
@@ -44,6 +42,16 @@
 
                 <StackPanel Margin="0 5 0 0" x:Name="TopGames" Orientation="Horizontal">
 
+                </StackPanel>
+
+
+                <TextBlock Margin="0 20 0 0" FontSize="30" FontFamily="Segoe UI" Text="Игры по жанрам" FontWeight="Bold"/>
+
+                <StackPanel Margin="0 5 0 0" x:Name="Categories" Orientation="Horizontal">
+
+                    <controls:CategoryCardControl/>
+                    <controls:CategoryCardControl Margin="10 0 0 0"/>
+                    <controls:CategoryCardControl Margin="10 0 0 0"/>
                 </StackPanel>
             </StackPanel>
         </wpfui:DynamicScrollViewer>
